<?xml version="1.0" encoding="utf-8"?>
<ExtensionInfo
    displayName="@string/app_name"
    icon="@drawable/ic_field"
    id="trip-companion"
    scansDevices="false"
    mapLayer="true">

    <DataType
        description="@string/catalog_desc"
        displayName="@string/catalog_name"
        graphical="true"
        icon="@drawable/ic_field"
        typeId="poi-catalog" />

    <DataType
        description="@string/next_desc"
        displayName="@string/next_name"
        graphical="true"
        icon="@drawable/ic_field"
        typeId="poi-next" />

    <DataType
        description="@string/train_desc"
        displayName="@string/train_name"
        graphical="true"
        icon="@drawable/ic_field"
        typeId="train-catcher" />

    <DataType
        description="@string/overview_desc"
        displayName="@string/overview_name"
        graphical="true"
        icon="@drawable/ic_field"
        typeId="day-overview" />

    <DataType
        description="@string/radar_desc"
        displayName="@string/radar_name"
        graphical="true"
        icon="@drawable/ic_field"
        typeId="radar" />
</ExtensionInfo>
